--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
     "staffRegex": "^[!#*\\\"$\\;\\'()]+",
     "realmeyeUserAgent": "Mozilla/5.0 (Windows NT 6.2; WOW64; rv:19.0) Gecko/20100101 Firefox/19.0",
     "apiWaitTime": 1000,
+    "channelWhitelist": ["parsing"],
     "classStats" : {
         "768": {
             "name": "Rogue",
